# MachineVision

./: .gitignore  CMakeLists.txt  basic.cpp  cpp_pc_view.cpp  cppview.cpp  kinect_interface.cpp  libfreenect.hpp  main.cpp  test.cpp
